--- a/src/style.css
+++ b/src/style.css
@@ -53,12 +53,18 @@ time, mark, audio, video {
 }
 
 .sidebar {
+    display: flex;
+    flex-direction: column;
     grid-column: 1 / 3;
     grid-row: 2 / 5;
     background-color: white;
     border-radius: 0% 20px 20px 0%;
     border-right: 5px solid;
     border-top: 5px solid;;
+}
+
+.addButton {
+    align-self: center;
 }
 
 .taskspace {
