--- a/src/style.css
+++ b/src/style.css
@@ -82,24 +82,26 @@ time, mark, audio, video {
     position: fixed; 
     padding-top: 50px;
     left: 0; 
-    top: 0;
     width: 100%;
     height: 100%; 
-    background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.5);
   }
   .modal-content {
     position: relative; 
     background-color: white;
+    top: 20%;
     padding: 20px; 
     margin: auto; 
-    width: 75%;  
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
+    height: 40%;
+    width: 45%;  
+    border-radius: 20px;
+    border: 5px solid;
     animation-name: animatetop;
     animation-duration: 0.4s
   }
   .close-btn {
+    height: 1rem;
+    width: 2rem;
     float: right; 
     color: lightgray; 
     font-size: 24px;  
