--- a/src/style.css
+++ b/src/style.css
@@ -67,15 +67,25 @@ time, mark, audio, video {
     align-self: center;
 }
 
-.taskspace {
+.tasks-space {
     grid-column: 3 / 4;
     grid-row: 3 / 4;
+    display: flex;
+    flex-direction: column;
     background-color: white;
     border-radius: 20px;
     border: 5px solid;
 }
 
+.top-section {
+  width: 100%;
+  height: 20%;
+}
 
+.task-div {
+  width: 100%;
+  flex: 1;
+}
 
   .modal {
     display: none;
