--- a/src/style.css
+++ b/src/style.css
@@ -117,11 +117,17 @@ time, mark, audio, video {
 .task-div {
   width: 100%;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1%;
+  align-items: center;
 }
 
 .task-content {
   display: flex;
   align-items: center;
+  border: 3px solid;
+  width: 95%;
 }
 
   .modal {
