--- a/src/style.css
+++ b/src/style.css
@@ -137,7 +137,7 @@ time, mark, audio, video {
   width: 100%;
   height: 20%;
   display: grid;
-  grid-template-columns: 65% 12% 12% 12%;
+  grid-template-columns: 61% 12% 13% 1fr;
   grid-template-rows: 1fr 1fr;
   text-align: center;
 }
@@ -194,16 +194,43 @@ time, mark, audio, video {
   gap: 4%;
   align-items: center;
   overflow: auto;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
 }
 
 .task-content {
   display: grid;
-  grid-template-columns: 5% 60% 12% 12% 1fr 1fr;
+  grid-template-columns: 5% 55% 12% 12% 1fr 1fr;
+  grid-template-rows: 1fr;
   align-items: center;
   border: 3px solid;
   width: 95%;
+  gap: 1%;
 }
+
+  .status-checkbox {
+    height: 1.7rem;
+    width: 1.5rem;
+    justify-self: center;
+    accent-color: #ad70fe;
+  }
+
+  .taskpriority-button {
+    border: 2px solid;
+    border-radius: 5px;
+    font-size: 1.3rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  .task-edit {
+    height: 85%;
+    width: 100%;
+  }
+
+  .task-delete {
+    height: 80%;
+    width: 100%;
+  }
 
   .modal {
     display: none;
@@ -221,19 +248,66 @@ time, mark, audio, video {
     padding: 20px; 
     margin: auto; 
     height: 30%;
-    width: 40%;  
+    width: 35%;  
     border-radius: 20px;
     border: 5px solid;
     animation-name: animatetop;
     animation-duration: 0.4s
   }
+
+.modalform {
+  height: 85%;
+  display: grid;
+  grid-template-columns: 35% 10% 1fr 20% 20% 5%;
+  grid-template-rows: repeat(6, 1fr);
+  margin-top: 0.8rem;
+}
+
+.modalform > * {
+  border: 3px solid;
+  box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 1);
+}
+
+.form-name {
+  grid-column: 1;
+  grid-row: 1;
+  border-radius: 5px;
+}
+
+.form-description {
+  grid-column: 1 / 3;
+  grid-row: 3 / 7;
+  border-radius: 5px;
+}
+
+.form-date {
+  grid-column: 4 / 6;
+  grid-row: 1;
+  border-radius: 5px;
+}
+
+.form-priority {
+  grid-column: 4 / 6;
+  grid-row: 3;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.form-submit {
+  grid-column: 5;
+  grid-row: 6;
+  border-radius: 5px;
+  background-color: white;
+}
+
   .close-btn {
-    height: 1rem;
+    background-color: white;
     width: 2rem;
     float: right; 
-    color: lightgray; 
-    font-size: 24px;  
+    color:#ad70fe;
+    font-size: 1.8rem; 
     font-weight: bold;
+    border: none;
   }
   .close-btn:hover {
     color: darkgray;
