--- a/src/style.css
+++ b/src/style.css
@@ -320,3 +320,39 @@ time, mark, audio, video {
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
   }
+
+  .task-modal {
+    display: none;
+    position: fixed; 
+    padding-top: 50px;
+    left: 0; 
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .taskModal-content {
+    position: relative; 
+    background-color: white;
+    top: 20%;
+    padding: 20px; 
+    margin: auto; 
+    height: 30%;
+    width: 35%;  
+    border-radius: 20px;
+    border: 5px solid;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+
+  .close-edit {
+    background-color: white;
+    width: 2rem;
+    float: right; 
+    color:#ad70fe;
+    font-size: 1.8rem; 
+    font-weight: bold;
+    border: none;
+  }
+  .close-edit:hover {
+    color: darkgray;
+  }
