--- a/src/style.css
+++ b/src/style.css
@@ -219,6 +219,10 @@ time, mark, audio, video {
     accent-color: #ad70fe;
   }
 
+  .taskname-text-completed {
+    text-decoration: line-through;
+  }
+
   .taskpriority-button {
     border: 2px solid;
     border-radius: 5px;
