--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ time, mark, audio, video {
     display: grid;
     grid-template-columns: 9% 5% 70% 6% 1fr;
     grid-template-rows: 11% 1% 75% 1fr;
-    background-color: #878fff;
+    background-color: #E1E7F1;
     gap: 2rem
 }
 
@@ -38,7 +38,7 @@ time, mark, audio, video {
     align-items: center;
     grid-column: 2 / 5;
     grid-row: 1;
-    background-color: white;
+    background-color: #FEFBF6;
     border-radius: 0% 0% 20px 20px;
     border-right: 5px solid;
     border-left: 5px solid;
@@ -55,7 +55,7 @@ time, mark, audio, video {
     flex-direction: column;
     grid-column: 1 / 3;
     grid-row: 2 / 5;
-    background-color: white;
+    background-color: #FEFBF6;
     border-radius: 0% 20px 20px 0%;
     border-right: 5px solid;
     border-top: 5px solid;
@@ -67,7 +67,7 @@ time, mark, audio, video {
     width: 8.7rem;
     margin: 1.2rem;
     margin-bottom: 0;
-    background-color: white;
+    background-color: #FEFBF6;
     border: 3px solid #ad70fe;
     font-size: 1.8rem;
     border-radius: 10px;
@@ -124,7 +124,7 @@ time, mark, audio, video {
     grid-row: 3 / 4;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: #FEFBF6;
     border-radius: 20px;
     border: 5px solid;
     margin-left: 10%;
@@ -247,7 +247,7 @@ time, mark, audio, video {
   }
   .modal-content {
     position: relative; 
-    background-color: white;
+    background-color: #FEFBF6;
     top: 20%;
     padding: 20px; 
     margin: auto; 
@@ -294,18 +294,18 @@ time, mark, audio, video {
   grid-column: 4 / 6;
   grid-row: 3;
   border-radius: 5px;
-  background-color: white;
+  background-color: #FEFBF6;
 }
 
 .form-submit {
   grid-column: 5;
   grid-row: 6;
   border-radius: 5px;
-  background-color: white;
+  background-color: #FEFBF6;
 }
 
   .close-btn {
-    background-color: white;
+    background-color: #FEFBF6;
     width: 2rem;
     float: right; 
     color:#ad70fe;
@@ -347,7 +347,7 @@ time, mark, audio, video {
     width: 35%;  
     border-radius: 20px;
     border: 5px solid;
-    background-color: white;
+    background-color: #FEFBF6;
     animation-name: animatetop;
     animation-duration: 0.4s;
     font-size: 2rem;
@@ -366,7 +366,7 @@ time, mark, audio, video {
   }
 
   .close-edit {
-    background-color: white;
+    background-color: #FEFBF6;
     width: 2rem;
     align-self: end;
     color:#ad70fe;
