--- a/src/style.css
+++ b/src/style.css
@@ -40,9 +40,7 @@ time, mark, audio, video {
     grid-row: 1;
     background-color: #FEFBF6;
     border-radius: 0% 0% 20px 20px;
-    border-right: 5px solid;
-    border-left: 5px solid;
-    border-bottom: 5px solid;
+    box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
 }
 
 .headerText {
@@ -57,8 +55,7 @@ time, mark, audio, video {
     grid-row: 2 / 5;
     background-color: #FEFBF6;
     border-radius: 0% 20px 20px 0%;
-    border-right: 5px solid;
-    border-top: 5px solid;
+    box-shadow: 3px 0px 0px 0px rgba(0, 0, 0, 1);
 }
 
 .addButton {
@@ -126,7 +123,7 @@ time, mark, audio, video {
     flex-direction: column;
     background-color: #FEFBF6;
     border-radius: 20px;
-    border: 5px solid;
+    box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
     margin-left: 10%;
     margin-right: 3%;
 }
