change tasks styling

--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,8 @@ time, mark, audio, video {
     margin: 1.2rem;
     margin-bottom: 0;
     background-color: #FEFBF6;
-    border: 3px solid #ad70fe;
+    border: 2px solid black;
+    box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.48);
     font-size: 1.8rem;
     border-radius: 10px;
     font-weight: 650;
@@ -79,8 +80,8 @@ time, mark, audio, video {
   height: 45%;
   display: flex;
   gap: 5%;
-  border-top: 3px solid #707AFE;
-  border-bottom: 3px solid #707AFE;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
   margin-top: 18px;
 }
 
@@ -135,7 +136,7 @@ time, mark, audio, video {
   grid-template-columns: 61% 12% 13% 1fr;
   grid-template-rows: 1fr 1fr;
   text-align: center;
-  border-bottom: 3px solid #707AFE;
+  border-bottom: 3px solid #434343;
   margin-bottom: 10px;
 }
 
@@ -202,6 +203,8 @@ time, mark, audio, video {
   border: 3px solid;
   width: 95%;
   gap: 1%;
+  background-color: #FFEAE7;
+  border-radius: 8px;
 }
 
   .status-checkbox {
